# mbi

./: .gitignore
lab2/: lab2.md  pyproject.toml  to_mrna.py
